# Oxidizium

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: compile.yml
membrane/: build.gradle  gradle.properties
membrane/src/main/java/com/github/tatercertified/membrane/: BackendImpl.java  MthImpl.java  NativeImpl.java  OxidiziumLib.java
membrane/src/main/resources/: fabric.mod.json
nalim/: LICENSE.txt  build.gradle  gradle.properties
nalim/src/main/java/com/github/tatercertified/nalim/: BackendImpl.java  MthImpl.java  NativeImpl.java  OxidiziumLib.java
nalim/src/main/resources/: fabric.mod.json
native/: Cargo.toml  build.rs
native/macros/: Cargo.toml
native/macros/src/: lib.rs
native/src/: util.rs
native/src/util/: math_helper.rs  networking.rs  packets.rs
oxidizium/: build.gradle  gradle.properties
oxidizium/src/main/java/com/github/tatercertified/oxidizium/: Config.java  LoadRustBinary.java  NativeInterface.java  Oxidizium.java  OxidiziumMixinPlugin.java
oxidizium/src/main/resources/: fabric.mod.json  oxidizium.mixins.json
panama/: build.gradle  gradle.properties
panama/src/main/java/com/github/tatercertified/panama/: BackendImpl.java  MthImpl.java  NativeImpl.java
panama/src/main/resources/: fabric.mod.json  oxidizium.mixins.json  oxidizium_panama.mixins.json
testMod/: build.gradle  gradle.properties
testMod/src/main/java/com/github/tatercertified/oxidizium_tester/: MixinConfigPlugin.java  OxidiziumTesterClient.java  (+1 more)
testMod/src/main/resources/: fabric.mod.json  oxidizium_tester.mixins.json
(+31 files in other folders)
