[package]
name = "oxidizium"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[workspace]
members = ["macros"]

[dependencies]
oxidizium_macros = { path = "macros" }

[target.'cfg(all(target_arch = "x86_64", any(target_os = "windows", target_os = "macos", target_os = "linux")))'.dependencies]
rpmalloc = "0.2.2"

[target.'cfg(not(all(target_arch = "x86_64", any(target_os = "windows", target_os = "macos", target_os = "linux"))))'.dependencies]
mimalloc = { git = "https://github.com/ralfbiedert/mimalloc_rust", features = ["v3"] }

[build-dependencies]
cbindgen = "0.29.4"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
opt-level = 3
strip = "symbols"